--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 	  <version>6.8.1</version>
 	  <scope>test</scope>
 	 </dependency>
+	 <dependency>
+	  <groupId>mysql</groupId>
+	  <artifactId>mysql-connector-java</artifactId>
+	  <version>8.0.30</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
